need to still fix overflow

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
 }
 
@@ -80,7 +80,7 @@ p {
 }
 
 .confetti {
-  z-index: -1;
+  z-index: 0;
   height: 100%;
   width: 100%;
   display: block;
@@ -88,6 +88,7 @@ p {
   border: 1px solid #ddd;
   user-select: none;
   position: absolute;
+  pointer-events: none;
 }
 
 .countdownWrapper {
